2005-02-16  Bryce McKinlay  <mckinlay@redhat.com>

	* gnu/testlet/java/lang/Class/serialization.java: Remove stray space
	from 'Tags'.

2005-02-15  Audrius Meskauskas <audriusa@bluewin.ch>    
    * gnu/testlet/javax/swing/text/html/parser/ParserDelegator/parsingTester.java:
	New test on long tandem of subsequent html tags.

2005-02-14  Audrius Meskauskas <audriusa@bluewin.ch>    
    * gnu/testlet/javax/swing/text/html/parser/ParserDelegator/Text.java: New test.
    * gnu/testlet/javax/swing/text/html/parser/ParserDelegator/eolnNorification.java:
	New test.
    * gnu/testlet/javax/swing/text/html/parser/ParserDelegator/randomTables.java:
    New test.
	* gnu/testlet/javax/swing/text/html/parser/ParserDelegator/tokenLocations.java:
	New test case on position of SGML insertion.
	* gnu/testlet/javax/swing/text/html/parser/ParserDelegator/parsingTester.java:
	New test cases with valueless unknown argument and nested tables.
	
2005-02-13  Thomas Zander <zander@kde.org>
    * gnu/testlet/javax/swing/KeyStroke/getKeyStroke.java: new test

2005-02-13  Audrius Meskauskas <audriusa@bluewin.ch>    
    * gnu/testlet/javax/swing/text/html/parser/ParserDelegator/tokenLocations.java
    * gnu/testlet/javax/swing/text/html/parser/ParserDelegator/parsingTester.java
    Adding test if the positions of the parsed HTML tokens are reported correctly.

2005-02-12  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/awt/BasicStroke/hashCode.java: New test.

2005-02-10 Audrius Meskauskas <audriusa@bluewin.ch>    

	* gnu/testlet/javax/swing/text/html/parser/ParserDelegator/parsingTester.java
	Adding HTML parsing tests for JDK 1.3 and 1.4.

2005-02-10  Jeroen Frijters  <jeroen@frijters.net>

	* gnu/testlet/java/lang/ClassLoader/redefine.java:
	Corrected INNER_NAME.

2005-02-10  Thomas Zander <zander@kde.org>

	* gnu/testlet/javax/swing/JTabbedPane/Mnemonic.java: new test

2005-02-09  Bryce McKinlay  <mckinlay@redhat.com>
